src/test/test_cases/invalid/semanticErr/forLoop/forIntCondition.wacc
# The condition for the for loop evaluates to an integer, not a boolean

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  for (int i = 0; i + 7) do
    skip
  done
end